--- a/thirdBusinessScope1.html
+++ b/thirdBusinessScope1.html
@@ -104,7 +104,7 @@
 
       
 		<div style="background-color:#EEEEEE;height:500px;margin-top: 20px;margin-left: 220px">
-			<img src="img/caseInProcess1.jpg" style="float:left;margin: 20px 20px;width:300px">
+			<img src="img/CaseInProcess1.jpg" style="float:left;margin: 20px 20px;width:300px">
 			<h1 style="padding: 20px"> 审计</h1>
 			<div style="text-align: left">
 				<h3>
